--- a/projects/elements/src/chat-message/chat-message.global.css
+++ b/projects/elements/src/chat-message/chat-message.global.css
@@ -1,4 +1,4 @@
 nve-chat-message:has([slot='prefix'])::part(_message),
 nve-chat-message:has([slot='suffix'])::part(_message) {
-  margin-top: var(--top-offset);
+  margin-block-start: var(--top-offset);
 }
