--- a/projects/elements/src/dialog/dialog.css
+++ b/projects/elements/src/dialog/dialog.css
@@ -71,7 +71,7 @@
 
 nve-icon-button {
   position: absolute;
-  top: 8px;
-  right: 8px;
+  top: var(--nve-ref-size-200);
+  right: var(--nve-ref-size-200);
   z-index: 99;
 }
